@@ -27,6 +27,7 @@
 # IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
+atf_aclocal_DATA =
 BUILT_SOURCES =
 CLEANFILES =
 EXTRA_DIST =
