@@ -53,6 +53,9 @@ atf_c__dir = $(includedir)/atf-c++
 
 dist_man_MANS += atf-c++/atf-c++-api.3
 
+atf_aclocal_DATA += atf-c++/atf-c++.m4
+EXTRA_DIST += atf-c++/atf-c++.m4
+
 atf_c__dirpkgconfigdir = $(atf_pkgconfigdir)
 atf_c__dirpkgconfig_DATA = atf-c++/atf-c++.pc
 CLEANFILES += atf-c++/atf-c++.pc
